--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^9.13.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
